# NERD-Exercise

./: .gitignore  Jenkinsfile  NERD  NERD-test  run_tests.py  unstable_app.py
native/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
native/include/nerd/: features.h  platform.h
native/src/: features.cpp  main.c  platform_linux.c  platform_windows.c  test.cpp
